<resources>
    <string name="app_name">Hello Squirrel</string>

    <string name="first_name">Reagan</string>
    <string name="last_name">Dhar</string>
    <string name="full_name">%s %s</string>

    <string name="profile_bio_text">Hello! I am Reagan Dhar, a Sophomore at The City College of New York, and I have a lot of interest in programming. </string>

    <string name="profile_hobby_header_text">Greatest Hobbies of All Time:</string>
    <string name="profile_hobby_first_text">🥇 Video Games</string>
    <string name="profile_hobby_second_text">🥈 Cricket</string>
    <string name="profile_hobby_third_text">🥉 Reading</string>
</resources>